DEVX-813: refactoring using pattern matching